Fixes #789 [IDE] Save button not working

--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -494,6 +494,12 @@
 
 							moduleImports.forEach(e => loadSuggestions(e.module, codeCompletionSuggestions));
 
+							messageHub.subscribe(function() {
+								if (dirty) {
+									fileIO.saveText(_editor.getModel().getValue());
+								}
+							}, "workbench.editor.save");
+
 							var model = monaco.editor.createModel(fileText, fileType || 'text');
 							_editor.setModel(model);
 							_editor.addAction(createSaveAction());
