--- a/ide/ui/ide-repository/src/main/resources/ide-repository/snapshot.html
+++ b/ide/ui/ide-repository/src/main/resources/ide-repository/snapshot.html
@@ -54,12 +54,11 @@
       <div class="container" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
       	 <div class="row">
 			<div class="col-lg-12">
-		    	<label class="page-header">Import Snapshot</label>
+		    		<h3 class="page-header">Import Snapshot</h3>
 			</div>
 		 </div>
          <div class="row">
             <div class="col-md-3">
-               <h3>Upload files</h3>
                <div ng-show="uploader.isHTML5">
                   <!-- 3. nv-file-over uploader="link" over-class="className" -->
                   <div class="well my-drop-zone" nv-file-over="" uploader="uploader">
