--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
@@ -70,7 +70,9 @@
 
 <body border="1px" ng-app="import" ng-controller="ImportController">
 	<div class="container" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
-		<h3 class="well text-center">Import Project</h3>
+		<div class="col-lg-12">
+			<h3 class="page-header">Import Project</h3>
+		</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<label>Select Workspace:</label>
