--- a/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
@@ -52,7 +52,7 @@
 	<div id="splash"
 		style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; background: white; z-index: 1;">
 		<center id="splash" style="padding-top: 230px;">
-			<img src="../resources/mxgraph/3.9.1/images/loading.gif">
+			<img src="images/loading.gif">
 		</center>
 	</div>
 
