goldenlayout with webjars

--- a/ide/ui/ide-workbench/src/main/resources/ide/index.html
+++ b/ide/ui/ide-workbench/src/main/resources/ide/index.html
@@ -24,7 +24,7 @@
 
 	<!-- GoldenLayout with Theme Support -->
 	<link type="text/css" rel="stylesheet"
-		href="../../../../services/v4/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
+		href="/webjars/golden-layout/1.5.9/src/css/goldenlayout-base.css" />
 	<link type="text/css" rel="stylesheet"
 		href="../../../../services/v4/js/theme/resources.js/goldenlayout-theme.css" />
 
@@ -60,7 +60,7 @@
 	</script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="../../../../services/v4/web/resources/goldenlayout/1.5.9/goldenlayout.min.js">
+	<script type="text/javascript" src="/webjars/golden-layout/1.5.9/dist/goldenlayout.min.js">
 	</script>
 
 	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/message-hub.js"></script>
