--- a/ide/ui/ide-form-builder/src/main/resources/ide-form-builder/designer.html
+++ b/ide/ui/ide-form-builder/src/main/resources/ide-form-builder/designer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <link type="text/css" rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="../../../../../services/v4/web/resources/jquery-ui/1.12.1/jquery-ui.css">
+	<link type="text/css" rel="stylesheet" href="/webjars/jquery-ui/1.12.1/jquery-ui.css">
 	<link type="text/css" rel="stylesheet" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css">
 	<link type="image/png" rel="shortcut icon" href="../../../../../services/v4/web/resources/images/favicon.png" />
 	
@@ -368,7 +368,7 @@
 </body>
 
 	<script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
-	<script type="text/javascript" src="../../../../../services/v4/web/resources/jquery-ui/1.12.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/webjars/jquery-ui/1.12.1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js" async></script>
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular.min.js"></script>
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
