--- a/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
+++ b/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
@@ -29,7 +29,7 @@
 
 	<!-- jsTree -->
 	<link href="../../../../services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
-	<script src="../../../../services/v4/web/resources/jstree/3.3.4/jstree.js"></script>
+	<script src="/webjars/jstree/3.3.4/dist/jstree.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
