reverted goldenlayout URIs

--- a/ide/ui/ide-debugger/src/main/resources/ide-debugger/index.html
+++ b/ide/ui/ide-debugger/src/main/resources/ide-debugger/index.html
@@ -16,7 +16,7 @@
 	<link type="text/css" rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
 
 	<!-- GoldenLayout with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/webjars/golden-layout/1.5.9/src/css/goldenlayout-base.css" />
+	<link type="text/css" rel="stylesheet" href="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
 	<link type="text/css" rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
@@ -44,7 +44,7 @@
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/webjars/golden-layout/1.5.9/dist/goldenlayout.min.js"></script>
+	<script type="text/javascript" src="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
 	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/message-hub.js"></script>	
 	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/ui-layout.js"></script>
