--- a/ide/ui/ide-database/src/main/resources/ide-database/explorer/explorer.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/explorer/explorer.html
@@ -31,7 +31,7 @@
 	<script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
 	<link href="../../../../../services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
-	<script src="/webjars/jstree/3.3.5/dist/jstree.min.js"></script>
+	<script src="/webjars/jstree/3.3.5/jstree.min.js"></script>
 	
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/ide.css" />
