[IDE] Adds support for *.xsjslib file extensions

--- a/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/editor.html
@@ -124,6 +124,9 @@
 						extension: ".xsjs",
 						type: "javascript"
 					}, {
+						extension: ".xsjslib",
+						type: "javascript"
+					}, {
 						extension: ".hdbsynonym",
 						type: "json"
 					}, {
