Implemented problems tab similar to jobs
Signed-off-by: Boris Nenchovski <bobinen@gmail.com>

--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/index.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/index.html
@@ -77,7 +77,7 @@
 			.controller('WorkbenchController', ['Layouts', function (Layouts) {
 
 				this.layoutModel = {
-					views: ['workspace', 'import', 'editor', 'properties', 'console', 'preview'],
+					views: ['workspace', 'import', 'editor', 'properties', 'console', 'preview', 'problems'],
 					viewSettings: {
 						'workspace': { isClosable: false },
 						'import': { isClosable: false }
